// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/Button Defaults play-test 1`] = `
<div data-test-block="true">
  <button class="_button_q67d9_1 _button_primary_q67d9_1   "
          type="button"
  >
    <span class="_buttonText_q67d9_69">
      Klikk her
    </span>
  </button>
</div>
`;

exports[`Tester/Button VariantDanger play-test 1`] = `
<div data-test-block="true">
  <button class="_button_q67d9_1 _button_danger_q67d9_1   "
          type="button"
  >
    <span class="_buttonText_q67d9_69">
      Klikk her
    </span>
  </button>
</div>
`;

exports[`Tester/Button VariantSecondary play-test 1`] = `
<div data-test-block="true">
  <button class="_button_q67d9_1 _button_secondary_q67d9_1   "
          type="button"
  >
    <span class="_buttonText_q67d9_69">
      Klikk her
    </span>
  </button>
</div>
`;

exports[`Tester/Button VariantTertiary play-test 1`] = `
<div data-test-block="true">
  <button class="_button_q67d9_1 _button_tertiary_q67d9_1   "
          type="button"
  >
    <span class="_buttonText_q67d9_69">
      Klikk her
    </span>
  </button>
</div>
`;

exports[`Tester/Button WithAccesskey play-test 1`] = `
<div data-test-block="true">
  <button class="_button_q67d9_1 _button_primary_q67d9_1   "
          accesskey="j"
          type="button"
  >
    <span class="_buttonText_q67d9_69">
      Klikk her
    </span>
  </button>
</div>
`;

exports[`Tester/Button WithAriaDescribedby play-test 1`] = `
<div data-test-block="true">
  <button class="_button_q67d9_1 _button_primary_q67d9_1   "
          type="button"
          aria-describedby="testid1234"
  >
    <span class="_buttonText_q67d9_69">
      Klikk her
    </span>
  </button>
</div>
`;

exports[`Tester/Button WithAttributes play-test 1`] = `
<div data-test-block="true">
  <button id="htmlid"
          class="_button_q67d9_1 _button_primary_q67d9_1   dummyClassname"
          lang="nb"
          data-testid="123ID"
          form="formid123"
          type="button"
  >
    <span class="_buttonText_q67d9_69">
      Klikk her
    </span>
  </button>
</div>
`;

exports[`Tester/Button WithDisabled play-test 1`] = `
<div data-test-block="true">
  <button class="_button_q67d9_1 _button_primary_q67d9_1   "
          disabled
          type="button"
  >
    <span class="_buttonText_q67d9_69">
      Klikk her
    </span>
  </button>
</div>
`;

exports[`Tester/Button WithDisabledAndIcon smoke-test 1`] = `
<div data-test-block="true">
  <button class="_button_q67d9_1 _button_primary_q67d9_1 _button_withIcon_q67d9_47  "
          disabled
          type="button"
  >
    <span class="_iconWrapper_q67d9_25">
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_q67d9_25"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M2 3v7l15 2-15 2v7l21-9L2 3Z">
        </path>
      </svg>
    </span>
    <span class="_buttonText_q67d9_69">
      Klikk her
    </span>
  </button>
</div>
`;

exports[`Tester/Button WithEventHandlers play-test 1`] = `
<div data-test-block="true">
  <button class="_button_q67d9_1 _button_primary_q67d9_1   "
          type="button"
  >
    <span class="_buttonText_q67d9_69">
      Knapp har blitt klikket på
    </span>
  </button>
</div>
`;

exports[`Tester/Button WithExternalIcon play-test 1`] = `
<div data-test-block="true">
  <a class="_button_q67d9_1 _button_primary_q67d9_1  _button_withIconRight_q67d9_51 "
     href="#"
     role="button"
  >
    <span class="_buttonText_q67d9_69">
      Til altinn.no
    </span>
    <span class="_iconWrapper_q67d9_25">
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_q67d9_25 _iconExternal_q67d9_66"
           viewbox="0 0 24 24"
           focusable="false"
           aria-label="Til et annet nettsted"
           aria-hidden="false"
           role="img"
      >
        <path d="M14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7Zm5 16H5V5h7V3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7h-2v7Z">
        </path>
      </svg>
    </span>
  </a>
</div>
`;

exports[`Tester/Button WithIcon play-test 1`] = `
<div data-test-block="true">
  <button class="_button_q67d9_1 _button_primary_q67d9_1 _button_withIcon_q67d9_47  "
          type="button"
  >
    <span class="_iconWrapper_q67d9_25">
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_q67d9_25"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M2 3v7l15 2-15 2v7l21-9L2 3Z">
        </path>
      </svg>
    </span>
    <span class="_buttonText_q67d9_69">
      Klikk her
    </span>
  </button>
</div>
`;

exports[`Tester/Button WithLongText smoke-test 1`] = `
<div data-test-block="true">
  <button class="_button_q67d9_1 _button_primary_q67d9_1   "
          type="button"
  >
    <span class="_buttonText_q67d9_69">
      Denne knappen har en veldig lang tekst. Så lang at den tvinger fram linjeskift. Her har vi ikke ikon så da skal teksten midtstilles. Denne knappen har en veldig lang tekst. Så lang at den tvinger fram linjeskift. Her har vi ikke ikon så da skal teksten midtstilles
    </span>
  </button>
</div>
`;

exports[`Tester/Button WithLongTextAndIcon smoke-test 1`] = `
<div data-test-block="true">
  <button class="_button_q67d9_1 _button_primary_q67d9_1 _button_withIcon_q67d9_47  "
          type="button"
  >
    <span class="_iconWrapper_q67d9_25">
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_q67d9_25"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M2 3v7l15 2-15 2v7l21-9L2 3Z">
        </path>
      </svg>
    </span>
    <span class="_buttonText_q67d9_69">
      Denne knappen har en veldig lang tekst. Så lang at den tvinger fram linjeskift. Tekst skal venstrejusteres. Denne knappen har en veldig lang tekst. Så lang at den tvinger fram linjeskift. Tekst skal venstrejusteres.
    </span>
  </button>
</div>
`;

exports[`Tester/Button WithRef play-test 1`] = `
<div data-test-block="true">
  <button class="_button_q67d9_1 _button_primary_q67d9_1   "
          type="button"
          id="dummyIdForwardedFromRef"
  >
    <span class="_buttonText_q67d9_69">
      Klikk her
    </span>
  </button>
</div>
`;

exports[`Tester/Button WithSpinner smoke-test 1`] = `
<div data-test-block="true">
  <div class="bottomSpacingXL">
    <button class="_button_q67d9_1 _button_primary_q67d9_1   marginRightM"
            type="button"
    >
      <span class="_buttonText_q67d9_69">
        Klikk her
      </span>
    </button>
    <button class="_button_q67d9_1 _button_secondary_q67d9_1   marginRightM"
            type="button"
    >
      <span class="_buttonText_q67d9_69">
        Klikk her
      </span>
    </button>
    <button class="_button_q67d9_1 _button_tertiary_q67d9_1   marginRightM"
            type="button"
    >
      <span class="_buttonText_q67d9_69">
        Klikk her
      </span>
    </button>
    <button class="_button_q67d9_1 _button_danger_q67d9_1   "
            type="button"
    >
      <span class="_buttonText_q67d9_69">
        Klikk her
      </span>
    </button>
  </div>
  <div class="bottomSpacingXL">
    <button class="_button_q67d9_1 _button_primary_q67d9_1   marginRightM"
            type="button"
    >
      <span class="_buttonText_q67d9_69 _hide_q67d9_149">
        Klikk her
      </span>
      <div aria-live="polite"
           aria-atomic="true"
           class="_spinner_wnf1f_5 _spinner_white_wnf1f_19 _spinner_flexColumn_wnf1f_32 _spinner_small_wnf1f_22 _spinner_q67d9_153 "
      >
        <div class="_spinnerAnimation_wnf1f_40 ">
        </div>
        <span class="_spinnerTitle_wnf1f_59 _srOnly_wnf1f_70 _spinnerTitle_centerText_wnf1f_66 ">
          Laster inn
        </span>
      </div>
    </button>
    <button class="_button_q67d9_1 _button_secondary_q67d9_1   marginRightM"
            type="button"
    >
      <span class="_buttonText_q67d9_69 _hide_q67d9_149">
        Klikk her
      </span>
      <div aria-live="polite"
           aria-atomic="true"
           class="_spinner_wnf1f_5 _spinner_blue_wnf1f_16 _spinner_flexColumn_wnf1f_32 _spinner_small_wnf1f_22 _spinner_q67d9_153 "
      >
        <div class="_spinnerAnimation_wnf1f_40 ">
        </div>
        <span class="_spinnerTitle_wnf1f_59 _srOnly_wnf1f_70 _spinnerTitle_centerText_wnf1f_66 ">
          Laster inn
        </span>
      </div>
    </button>
    <button class="_button_q67d9_1 _button_tertiary_q67d9_1   marginRightM"
            type="button"
    >
      <span class="_buttonText_q67d9_69 _hide_q67d9_149">
        Klikk her
      </span>
      <div aria-live="polite"
           aria-atomic="true"
           class="_spinner_wnf1f_5 _spinner_blue_wnf1f_16 _spinner_flexColumn_wnf1f_32 _spinner_small_wnf1f_22 _spinner_q67d9_153 "
      >
        <div class="_spinnerAnimation_wnf1f_40 ">
        </div>
        <span class="_spinnerTitle_wnf1f_59 _srOnly_wnf1f_70 _spinnerTitle_centerText_wnf1f_66 ">
          Laster inn
        </span>
      </div>
    </button>
    <button class="_button_q67d9_1 _button_danger_q67d9_1   "
            type="button"
    >
      <span class="_buttonText_q67d9_69 _hide_q67d9_149">
        Klikk her
      </span>
      <div aria-live="polite"
           aria-atomic="true"
           class="_spinner_wnf1f_5 _spinner_black_wnf1f_13 _spinner_flexColumn_wnf1f_32 _spinner_small_wnf1f_22 _spinner_q67d9_153 "
      >
        <div class="_spinnerAnimation_wnf1f_40 ">
        </div>
        <span class="_spinnerTitle_wnf1f_59 _srOnly_wnf1f_70 _spinnerTitle_centerText_wnf1f_66 ">
          Laster inn
        </span>
      </div>
    </button>
  </div>
  <div class="bottomSpacingXL">
    <button class="_button_q67d9_1 _button_primary_q67d9_1 _button_withIcon_q67d9_47  marginRightM"
            type="button"
    >
      <span class="_iconWrapper_q67d9_25">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_q67d9_25"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M2 3v7l15 2-15 2v7l21-9L2 3Z">
          </path>
        </svg>
      </span>
      <span class="_buttonText_q67d9_69">
        Klikk her
      </span>
    </button>
    <button class="_button_q67d9_1 _button_secondary_q67d9_1 _button_withIcon_q67d9_47  marginRightM"
            type="button"
    >
      <span class="_iconWrapper_q67d9_25">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_q67d9_25"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M2 3v7l15 2-15 2v7l21-9L2 3Z">
          </path>
        </svg>
      </span>
      <span class="_buttonText_q67d9_69">
        Klikk her
      </span>
    </button>
    <button class="_button_q67d9_1 _button_tertiary_q67d9_1 _button_withIcon_q67d9_47  marginRightM"
            type="button"
    >
      <span class="_iconWrapper_q67d9_25">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_q67d9_25"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M2 3v7l15 2-15 2v7l21-9L2 3Z">
          </path>
        </svg>
      </span>
      <span class="_buttonText_q67d9_69">
        Klikk her
      </span>
    </button>
    <button class="_button_q67d9_1 _button_danger_q67d9_1 _button_withIcon_q67d9_47  "
            type="button"
    >
      <span class="_iconWrapper_q67d9_25">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_q67d9_25"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M2 3v7l15 2-15 2v7l21-9L2 3Z">
          </path>
        </svg>
      </span>
      <span class="_buttonText_q67d9_69">
        Klikk her
      </span>
    </button>
  </div>
  <button class="_button_q67d9_1 _button_primary_q67d9_1 _button_withIcon_q67d9_47  marginRightM"
          type="button"
  >
    <span class="_iconWrapper_q67d9_25 _hide_q67d9_149">
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_q67d9_25"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M2 3v7l15 2-15 2v7l21-9L2 3Z">
        </path>
      </svg>
    </span>
    <span class="_buttonText_q67d9_69 _hide_q67d9_149">
      Klikk her
    </span>
    <div aria-live="polite"
         aria-atomic="true"
         class="_spinner_wnf1f_5 _spinner_white_wnf1f_19 _spinner_flexColumn_wnf1f_32 _spinner_small_wnf1f_22 _spinner_q67d9_153 "
    >
      <div class="_spinnerAnimation_wnf1f_40 ">
      </div>
      <span class="_spinnerTitle_wnf1f_59 _srOnly_wnf1f_70 _spinnerTitle_centerText_wnf1f_66 ">
        Laster inn
      </span>
    </div>
  </button>
  <button class="_button_q67d9_1 _button_secondary_q67d9_1 _button_withIcon_q67d9_47  marginRightM"
          type="button"
  >
    <span class="_iconWrapper_q67d9_25 _hide_q67d9_149">
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_q67d9_25"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M2 3v7l15 2-15 2v7l21-9L2 3Z">
        </path>
      </svg>
    </span>
    <span class="_buttonText_q67d9_69 _hide_q67d9_149">
      Klikk her
    </span>
    <div aria-live="polite"
         aria-atomic="true"
         class="_spinner_wnf1f_5 _spinner_blue_wnf1f_16 _spinner_flexColumn_wnf1f_32 _spinner_small_wnf1f_22 _spinner_q67d9_153 "
    >
      <div class="_spinnerAnimation_wnf1f_40 ">
      </div>
      <span class="_spinnerTitle_wnf1f_59 _srOnly_wnf1f_70 _spinnerTitle_centerText_wnf1f_66 ">
        Laster inn
      </span>
    </div>
  </button>
  <button class="_button_q67d9_1 _button_tertiary_q67d9_1 _button_withIcon_q67d9_47  marginRightM"
          type="button"
  >
    <span class="_iconWrapper_q67d9_25 _hide_q67d9_149">
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_q67d9_25"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M2 3v7l15 2-15 2v7l21-9L2 3Z">
        </path>
      </svg>
    </span>
    <span class="_buttonText_q67d9_69 _hide_q67d9_149">
      Klikk her
    </span>
    <div aria-live="polite"
         aria-atomic="true"
         class="_spinner_wnf1f_5 _spinner_blue_wnf1f_16 _spinner_flexColumn_wnf1f_32 _spinner_small_wnf1f_22 _spinner_q67d9_153 "
    >
      <div class="_spinnerAnimation_wnf1f_40 ">
      </div>
      <span class="_spinnerTitle_wnf1f_59 _srOnly_wnf1f_70 _spinnerTitle_centerText_wnf1f_66 ">
        Laster inn
      </span>
    </div>
  </button>
  <button class="_button_q67d9_1 _button_danger_q67d9_1 _button_withIcon_q67d9_47  "
          type="button"
  >
    <span class="_iconWrapper_q67d9_25 _hide_q67d9_149">
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_q67d9_25"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M2 3v7l15 2-15 2v7l21-9L2 3Z">
        </path>
      </svg>
    </span>
    <span class="_buttonText_q67d9_69 _hide_q67d9_149">
      Klikk her
    </span>
    <div aria-live="polite"
         aria-atomic="true"
         class="_spinner_wnf1f_5 _spinner_black_wnf1f_13 _spinner_flexColumn_wnf1f_32 _spinner_small_wnf1f_22 _spinner_q67d9_153 "
    >
      <div class="_spinnerAnimation_wnf1f_40 ">
      </div>
      <span class="_spinnerTitle_wnf1f_59 _srOnly_wnf1f_70 _spinnerTitle_centerText_wnf1f_66 ">
        Laster inn
      </span>
    </div>
  </button>
</div>
`;

exports[`Tester/Button WithType play-test 1`] = `
<div data-test-block="true">
  <button class="_button_q67d9_1 _button_primary_q67d9_1   "
          type="submit"
  >
    <span class="_buttonText_q67d9_69">
      Klikk her
    </span>
  </button>
</div>
`;
